--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,9 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+Assets/ModelosCamaBaño.meta
+Assets/Music.meta
+Assets/Music/main_menu.mp3.meta
+Assets/ModelosCamaBaño.meta
+Assets/Music.meta
+Assets/Music/main_menu.mp3.meta
